--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.4.4",
-    "next": "^13.5.6",
-    "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "dotenv": "16.4.4",
+    "next": "13.5.6",
+    "node-pg-migrate": "6.2.2",
+    "pg": "8.11.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "jest": "^29.6.2",
-    "prettier": "^3.1.1"
+    "jest": "29.6.2",
+    "prettier": "3.1.1"
   }
 }
