--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,7 +1,7 @@
 services:
   tabnews-clone-database:
-    image: "postgres:16.0-alpine3.18"
+    image: 'postgres:16.0-alpine3.18'
     env_file:
       - ../.env.development
     ports:
-      - "5432:5432"
+      - '5432:5432'
