--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,5 +1,6 @@
+name: tabnews-clone
 services:
-  tabnews-clone-database:
+  database:
     image: 'postgres:16.0-alpine3.18'
     env_file:
       - ../.env.development
